test/scc/expr/semantic-errors/153.t
void test()
{
    char a[1] = "abc";
}